2020-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Disable Old JPEG format in libtiff.

2020-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add --without-gdi32 configure option to support
	disabling use of the Microsoft Windows gdi32 library if it is not
	wanted.

2020-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Remove the assumption that a native Windows build
	means that Ghostscript may be available so that MinGW tests which
	depend on Ghostcript are attributed proper XFAIL status by the
	test suite.

2020-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (MagickCondSignal): Explicitly initialize 'oact'
	prior to calling sigaction() in order to attempt to surmount
	apparent oss-fuzz framework issue.

2020-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/delegate.c, magick/magick.c, magick/nt_base.c: Fix
	compilation errors under MinGW when Ghostscript support is
	disabled.

2020-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c: Fix compilation issue noticed under MinGW.

	* magick/render.c (DrawImage): Handle the case that
	ExtractTokensBetweenPushPop() can return NULL.  Fixes oss-fuzz
	24659 "Null-dereference READ in DrawImage".

	* magick/magick.c (MagickCondSignal): Re-implement to handle the
	case where a new-style 'siginfo' signal handler was previously
	registered, as well as the legacy type.  This may address oss-fuzz
	24690 "Use-of-uninitialized-value in MagickCondSignal".

2020-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/drawtest.c: Use structured error handling and report all
	output to stderr so it does not screw up TAP tests.

	* magick/render.c (DTOLONG_MIN): Correct 32-bit definition of
	DTOLONG_MIN.

	* wand/wandtests.tap: Wand drawtest requires FreeType.

	* NEWS.txt: Update with changes up to 2020-07-26.
