@@ -38,6 +38,10 @@
 <p>2020-08-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/tiff.c (ReadTIFFImage): Apply the same resource limits to
+TIFF tile sizes as apply to the image itself.  Fixes oss-fuzz
+issues 24523 &quot;Timeout in coder_TIFF_fuzzer&quot; and 24810 &quot;Timeout in
+coder_PTIF_fuzzer&quot;.</li>
 <li>fuzzing/oss-fuzz-build.sh: Disable Old JPEG format in libtiff.</li>
 </ul>
 </blockquote>
