@@ -1,5 +1,10 @@
 2020-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/tiff.c (ReadTIFFImage): Apply the same resource limits to
+	TIFF tile sizes as apply to the image itself.  Fixes oss-fuzz
+	issues 24523 "Timeout in coder_TIFF_fuzzer" and 24810 "Timeout in
+	coder_PTIF_fuzzer".
+
 	* fuzzing/oss-fuzz-build.sh: Disable Old JPEG format in libtiff.
 
 2020-08-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
